# agile-swarm-sdk

./: .gitignore  README.md  pyproject.toml  pytest.ini
.githooks/: pre-commit
examples/: basic.py
src/agile_ai_sdk/: __init__.py  executor.py  solo_agent_harness.py  team.py
src/agile_ai_sdk/agents/: __init__.py  base.py  code_act_agent.py  dev.py  em.py  planner.py  senior_reviewer.py
src/agile_ai_sdk/core/: __init__.py  deps.py  events.py  router.py
src/agile_ai_sdk/lib/: logger.py
src/agile_ai_sdk/llm/: __init__.py  anthropic.py  default.py  openai.py
src/agile_ai_sdk/logging/: __init__.py  event_logger.py  run_metadata.py
src/agile_ai_sdk/models/: __init__.py  base.py  event.py  event_data.py  message.py
src/agile_ai_sdk/models/enums/: __init__.py  agent_role.py  event_type.py  human_role.py  priority.py  run_status.py  swarm_type.py
src/agile_ai_sdk/utils/: __init__.py  printer.py  time.py
src/agile_ai_tui/models/: __init__.py  message.py
src/agile_ai_tui/screens/: chat.py
src/agile_ai_tui/utils/: __init__.py  formatters.py
src/agile_ai_tui/widgets/: __init__.py  agent_message.py  collapsible_message.py  system_message.py  tool_call_message.py  user_message.py
tests/: conftest.py
tests/e2e/: test_features.py  test_scenarios.py  test_smoke.py
tests/e2e/fixtures/broken_code/: README.md  buggy.py  test_buggy.py
tests/e2e/fixtures/fastapi_app/: README.md  main.py  requirements.txt  test_main.py
tests/e2e/fixtures/simple_python/: README.md  calculator.py  test_calculator.py
tests/helpers/: __init__.py  assertions.py  event_collector.py  llm_judge.py  log_assertions.py  time_utils.py  workspace_utils.py
tests/logging/: run_logger.py  run_metadata.py
tests/types/: evaluations.py
