[tool.poetry]
name = "agile-ai-sdk"
version = "0.1.0"
description = "Evaluating AI coding agents within the constraints of human-centric agile workflows"
authors = ["Scott Susanto <susantoscott@gmail.com>"]
readme = "README.md"
packages = [{include = "agile_ai_sdk", from = "src"}]

[tool.poetry.dependencies]
# Core
python = "^3.10"
pydantic = "2.12.4"
pydantic-ai = "^1.22.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.8.4"
pytest = "^8.0.0"
pytest-asyncio = "^0.23.0"
pytest-timeout = "^2.3.0"

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = [
  "E",   # pycodestyle errors
  "W",   # pycodestyle warnings
  "F",   # pyflakes
  "I",   # isort
  "B",   # flake8-bugbear
  "C4",  # flake8-comprehensions
  "UP",  # pyupgrade
]
ignore = [
  "E501",  # line too long, handled by formatter
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "e2e: End-to-end tests (slow, expensive, uses real LLM calls)",
    "slow: Tests that take >5 seconds to run",
]
# Skip e2e tests by default
addopts = "-m 'not e2e'"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
