[tool.poetry]
name = "agile-ai-sdk"
version = "0.1.0"
description = "Evaluating AI coding agents within the constraints of human-centric agile workflows"
authors = ["Scott Susanto <susantoscott@gmail.com>"]
readme = "README.md"
packages = [{include = "agile_ai_sdk", from = "src"}]

[tool.poetry.dependencies]
# Core
python = "^3.10"
pydantic = "2.12.4"
pydantic-ai = "^1.22.0"
python-dotenv = "^1.0.0"

# Logging
logfire = "^4.15.1"

# TUI (optional)
textual = {version = "^1.0.0", optional = true}
pygments = {version = "^2.18.0", optional = true}

[tool.poetry.group.dev.dependencies]
ruff = "^0.8.4"
pytest = "^8.0.0"
pytest-asyncio = "^0.23.0"
pytest-timeout = "^2.3.0"

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = [
  "E",   # pycodestyle errors
  "W",   # pycodestyle warnings
  "F",   # pyflakes
  "I",   # isort
  "B",   # flake8-bugbear
  "C4",  # flake8-comprehensions
  "UP",  # pyupgrade
]
ignore = [
  "E501",  # line too long, handled by formatter
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.poetry.extras]
tui = ["textual", "pygments"]

[tool.poetry.scripts]
agile = "agile_ai_tui.__main__:main"
agi = "agile_ai_tui.__main__:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
